--- a/Project1 - responsive website/styles.css
+++ b/Project1 - responsive website/styles.css
@@ -22,7 +22,8 @@ ul{
 }
 
 p{
-    font-size: 1.6rem;
+    font-size: 15px;
+    text-align: left;
 }
 
 img{
@@ -41,12 +42,14 @@ body{
 
 /* header */
 header{
+    background-color: white;
     width: 100%;
     height: 5rem;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
+    
 }
 
 .container{
@@ -62,8 +65,6 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem 0;
-    border-bottom: 1px solid rgba(255, 255, 255, .2);
 }
 .nav-brand{
     width: 2rem;   
@@ -78,18 +79,21 @@ nav{
 }
 
 .nav-list{
-    width: 25rem;
-    height: 100vh;
-    background-color: grey;
+    /* width: 25rem; */
+    /* height: 50vh; */
+    background-color: white;
     position: fixed;
     top: 0;
-    right: -26rem;
+    /* right: -26rem; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 15000;
-    transition: all 650ms ease-in-out;
+    /* z-index: 15000; */
+    /* transition: all 650ms ease-in-out; */
+    
+    /* margin-right: 200px; */
+    /* margin-left: 200px; */
 }
 
 .nav-list.active{
@@ -103,11 +107,13 @@ nav{
 }
 
 .nav-item{
-    margin: 1.5rem 0 ;
+    margin: 1rem 0 ;
+    list-style: none;
+
 }
 .nav-link{
-    font-size: 1.6rem;
-    text-transform: uppercase;
+    font-size: 1rem;
+    text-transform: capitalize;
     color: rgba(0, 0,0, 7);
 }
  /* TODO  - icons */ 
@@ -117,13 +123,18 @@ nav{
 .hero{
     width: 100%;
     height: 80vh;
-    background: linear-gradient(135deg, rgba(49,24,131,0.9) 0%, rgba(72,56,149,0.8) 100%), 
-        url("http://storage.zielona-kraina.com/source/1/bu1vmpluNFDwnOeSVasuKleyblCki6Yw.jpg") center no-repeat;
+    background: url("http://storage.zielona-kraina.com/source/1/bu1vmpluNFDwnOeSVasuKleyblCki6Yw.jpg") center no-repeat;
+
     background-size: cover;
     position: relative;
 }
 
 /* News */
+
+.project-background{
+    background-color: #F5F5F5;
+}
+
 .news h3{
     padding: 0;
     text-transform: uppercase;
@@ -131,11 +142,17 @@ nav{
 
 .title-heading{
     text-align: center;
-    margin-bottom: 10rem;
+    margin-bottom: 2rem;
+    margin-right: 10rem;
+    margin-left: 10rem;
 }
 
 .title-heading h3{
-    font-size: 1.4rem;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: normal;
+    margin: 20px;
+    color: #018136;
 }
 
 .title-heading h1{
@@ -144,6 +161,24 @@ nav{
     color: green;
 }
 
+.container-arrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.arrow {
+    box-sizing: border-box;
+    height: 20px;
+    width: 20px;
+    border-style: solid;
+    border-color: #018136;
+    border-width: 0px 1px 1px 0px;
+    transform: rotate(45deg);
+    transition: border-width 6rem;
+  }
+
+/**********************/
 
 /* activity grid */
 .activities-grid{
@@ -224,9 +259,9 @@ nav{
         margin:0 2.5rem;
     }
     .nav-link{
-        color:#fafafa;
+        color: black;
         position: relative;
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
     .hero{
         height: 60vh;
