--- a/Project1 - responsive website/styles.css
+++ b/Project1 - responsive website/styles.css
@@ -178,6 +178,11 @@ nav{
     transition: border-width 6rem;
   }
 
+  .arrow:hover {
+    border-bottom-width: 4px;
+    border-right-width: 4px;
+  }
+
 /**********************/
 
 /* activity grid */
