--- a/Project1 - responsive website/styles.css
+++ b/Project1 - responsive website/styles.css
@@ -37,7 +37,7 @@ section{
 }
 
 body{
-    background-color: cornflowerblue;
+    background-color: #F5F5F5;
 }
 
 /* header */
@@ -135,7 +135,7 @@ nav{
     background-color: #F5F5F5;
 }
 
-.news h3{
+.h3{
     padding: 0;
     text-transform: uppercase;
 }
@@ -161,19 +161,30 @@ nav{
     color: green;
 }
 
+.container p{
+    margin-bottom: 2rem;
+    margin-right: 10rem;
+    margin-left: 10rem;
+}
+
+
+/* arrow */
 .container-arrow{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
+    margin-top: 30px;
+
 }
 
 .arrow {
     box-sizing: border-box;
-    height: 20px;
-    width: 20px;
+    height: 12px;
+    width: 12px;
     border-style: solid;
     border-color: #018136;
-    border-width: 0px 1px 1px 0px;
+    border-width: 0px 2px 2px 0px;
     transform: rotate(45deg);
     transition: border-width 6rem;
   }
@@ -186,23 +197,23 @@ nav{
 /**********************/
 
 /* activity grid */
-.activities-grid{
+/* .activities-grid{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(25rem,1fr));
     grid-gap: 2.5rem;
-}
+} */
 
-.activities-grid-item{
+/* .activities-grid-item{
     height: 40rem;
     padding: 5rem;
     /* color: #fafafa; */
-    position: relative;
+    /* position: relative;
     display: flex;
     justify-content: center;
     z-index: 1;
-}
+} */ 
 
-.activities-grid-item-before{
+/* .activities-grid-item-before{
     content: "";
     position: absolute;
     top: 0;
@@ -211,7 +222,7 @@ nav{
     height: 100%;
     background-image: linear-gradient(135deg, rgba(49,24,131,0.9) 0%, rgba(72,56,149,0.8) 100%);
     z-index: -1;
-}
+} */
 
 .description{
     background-color: white;
@@ -273,6 +284,14 @@ nav{
     }
 }
 
+
+.news{
+    background-color: #ECECEC;
+    padding-top:80px;
+    padding-bottom:80px;
+    padding-right:200px;
+    padding-left:200px;
+}
 
 .wrapper{
     display: grid;
