--- a/Project1 - responsive website/styles.css
+++ b/Project1 - responsive website/styles.css
@@ -182,6 +182,14 @@ nav{
     font-weight: bold;
 }
 
+.bold-elem-click{
+    text-transform: uppercase;
+    font-size: 16px;
+    color: #018136;
+    font-weight: bold;
+}
+
+
 /* arrow */
 
 .container-arrow-left{
@@ -347,4 +355,103 @@ nav{
     font-size: 0.5rem;
     color: black;
     line-height: normal;
+}
+
+/* img gallery */
+/* 
+.gallery-container{
+    /* position: absolute; */
+
+/* } */
+
+.gallery {
+    /* position: relative;
+    overflow: hidden;
+    /* width: 50px;
+    height: 50px; */
+
+    /* float: right; */
+    /* width: 100%; */ 
+}
+
+/* .gallery column{
+    float: left;
+    width: 25%;
+    padding: 10px;
+}
+
+.gallery img {
+    position: absolute; */
+    /* left: 50%;
+    top: 50%;
+    height: 100%;
+    width: auto;
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%); */
+/* } */
+
+/* new gallery */
+.column {
+  float: left;
+  width: 25%;
+  padding: 5px;
+}
+
+/* Style the images inside the grid */
+.column img {
+  opacity: 0.8; 
+  width: 150px;
+  height: 150px;
+  cursor: pointer; 
+}
+
+.column img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container */
+.container {
+  position: relative;
+  display: none;
+}
+
+/* Przepisy */
+.recepies-layer {
+  
+}
+
+.recepies{
+    background-image: linear-gradient(to bottom, #81BC00, rgba(1, 129, 54, 0.3) 70.71%),
+    url("/images/fruitveg.jpeg");
+}
+
+/* dishes */
+.dishes-container{
+    /* width: 100%; */
+    /* overflow: hidden; */
+    /* align-items: center;
+     */
+     display: flex;
+     align-items: center;
+     justify-content: center;
+
+}
+
+.dish{
+    /* width: 10%; */
+    margin: 2rem;
+    display: inline-block;
+}
+
+.dish p{
+    color: white;
+    text-transform: uppercase;
 }
