--- a/Project3 - sails js/bookbase/views/add.ejs
+++ b/Project3 - sails js/bookbase/views/add.ejs
@@ -2,7 +2,7 @@
 
 <form method="POST" action="/books/create">
     <div class="form-group">
-        <label for="title">Titile</label>
+        <label for="title">Title</label>
         <input type="text" name="title" class="form-control">
     </div>
 
