--- a/Project1 - responsive website/css/news.css
+++ b/Project1 - responsive website/css/news.css
@@ -64,8 +64,8 @@
   }
   
 
-  .news-images{
-    border: 1px solid #82BB00;
+.news-images{
+    border: solid #82BB00;
     border-style: solid;
     border-width: 2px;
     
@@ -79,3 +79,26 @@
     position:absolute;
 }
 
+gallerycont{
+  margin: .5vw;
+  display: -ms-flexbox;
+  -ms-flexbox-wrap: wrap;
+  -ms-flexbox-direction: column;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  display: -webkit-box;
+  display: flex;  
+}
+
+gallerycont div{
+  -webkit-box-flex: auto;
+  -ms-flex: auto;
+  flex: auto;
+  width: 200px;
+  margin: .5vw;
+}
+
+gallerycont div img{
+  width:100%;
+  height:auto;
+}
