html css website - footer updated

--- a/Project1 - responsive website/css/organizer.css
+++ b/Project1 - responsive website/css/organizer.css
@@ -9,7 +9,7 @@
  }
 
 .part{
-    margin: 2rem;
+    /* margin: 2rem; */
     display: inline-block;
     text-transform: capitalize;
     text-align: center;    
