--- a/Project1 - responsive website/css/footer.css
+++ b/Project1 - responsive website/css/footer.css
@@ -17,8 +17,44 @@
     width: 50%;
 }
 
-.footer-containe stip{
+/* .stip p{
     /* width: 100%; */
-    background-color: #018136;
-    min-height: 40px;
+    /* background-color: #018136;
+    min-height: 40px; 
+    /* position: fixed; */
+    /* left: 0; */
+    /* bottom: 0; */
+    /* width: 100%; */
+    /* background-color: red; */
+    /* color: white; */
+    /* text-align: center; */
+
+/* 
+    width: 100%;
+    position: fixed;        
+    background: #333;
+    padding: 10px 0;
+    color: #fff;
+} */
+
+/*
+.fixed-footer{
+     width: 100%;
+    position: fixed;        
+    background: #333;
+    padding: 10px 0;
+    color: #fff;
 }
+ */
+
+
+ .footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #018136;
+    text-align: center;
+    min-width: 20px;
+    margin-top: 20px;
+  }
