--- a/Project4 - leaderboard meteor js/leaderboardapp/client/main.css
+++ b/Project4 - leaderboard meteor js/leaderboardapp/client/main.css
@@ -1,8 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
-  background-attachment: fixed;
+  background-color:    #ecf9f2;
  
   position: absolute;
   top: 0;
@@ -17,22 +15,17 @@ body {
 }
  
 .container {
-  max-width: 600px;
+  max-width: 50%;
   margin: 0 auto;
   min-height: 100%;
   background: white;
 }
  
 header {
-  background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
   padding: 20px 15px 15px 15px;
   position: relative;
 }
- 
-#login-buttons {
-  display: block;
-}
+
  
 h1 {
   font-size: 1.5em;
@@ -44,7 +37,7 @@ h1 {
  
 form {
   margin-top: 10px;
-  margin-bottom: -10px;
+  margin-bottom: 10px;
   position: relative;
 }
  
