html css website - navigation updated

--- a/Project1 - responsive website/css/media.css
+++ b/Project1 - responsive website/css/media.css
@@ -28,7 +28,7 @@
         display: none;
     }
     .nav-item{
-        margin:0 2.5rem;
+        /* margin:0 2.5rem; */
     }
     .nav-link{
         color: black;
