--- a/Project1 - responsive website/css/hero.css
+++ b/Project1 - responsive website/css/hero.css
@@ -1,11 +1,30 @@
 /* hero */
 .hero{
     width: 100%;
+    height: 80%;
     /* height: 80vh; */
-    background: url("/images/dzieci.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top, center;
-    min-height: 600px;
-    
+    min-height: 600px; 
+    position: relative;
 }
+/* 
+section {
+    display: flex;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+}
+
+.hamburger{
+    justify-self: end;
+}
+
+.hero img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+} 
+*/
