--- a/Project1 - responsive website/css/navigation.css
+++ b/Project1 - responsive website/css/navigation.css
@@ -39,6 +39,7 @@ nav{
     flex-direction:row;
     align-items: center;
     justify-content: center;
+    /* padding-left: 10px; */
 }
 
 .nav-list.active{
@@ -52,22 +53,16 @@ nav{
 }
 
 .nav-item{
-    margin: 5px;
-    font-size: 16px;
-    text-transform: uppercase;
+    margin: 10px;
+    font-size: 14px;
+    /* text-transform: uppercase; */
     list-style: none;
-    position: relative;
-    width: 2rem;
-}
-
-.square:after {
-  content: "";
-  display: block;
-  padding-bottom: 100%;
+    /* position: relative; */
+    /* width: 1rem; */
 }
 
 .nav-link{
     /* font-size: 1rem; */
-    color: rgba(0, 0,0, 7);
+    /* color: rgba(0, 0,0, 7); */
 }
 
