--- a/Project1 - responsive website/css/navigation.css
+++ b/Project1 - responsive website/css/navigation.css
@@ -2,13 +2,13 @@
 
 header{
     background-color: white;
-    width: 100%;
-    height: 5rem;
+    /* width: 100%; */
+    /* height: 5rem; */
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
-    
+    /* z-index: 1; */
+    margin-top: 1rem;
 }
 
 nav{
@@ -18,7 +18,7 @@ nav{
 }
 
 .nav-brand{
-    width: 2rem;   
+    width: 1rem;   
 }
 
 .menu-icons i {
