--- a/Project1 - responsive website/css/news.css
+++ b/Project1 - responsive website/css/news.css
@@ -68,14 +68,14 @@
     border: solid #82BB00;
     border-style: solid;
     border-width: 2px;
-    
-    position:relative;
+    padding: 10px;
     overflow:hidden;
-    padding-bottom:100%;
+    display: flex;
 }
 
 .news-images img {
     object-fit: cover;
-    position:absolute;
+    width: 100%;
+    height: auto;
 }
 
