--- a/Project1 - responsive website/css/styles.css
+++ b/Project1 - responsive website/css/styles.css
@@ -27,21 +27,25 @@ p{
 }
 
 img{
-    width: 100%;
-    max-width: 100%;
-    height: auto;
+    /* width: 100%;
+    height: auto; */
+}
+
+body{
+    /* background-color: #F5F5F5; */
+    background-color: #F5F5F5;
+    position: relative;
+
 }
 
 section{
     padding: 2rem 0;
 }
 
-body{
-    /* background-color: #F5F5F5; */
-    background-color: white;
-    position: relative;
-
+.grey-background{
+    background-color:#ECECEC;
 }
+
 
 .h3{
     padding: 0;
@@ -59,34 +63,13 @@ body{
     font-size: 25px;
     text-transform: uppercase;
     font-weight: normal;
-    margin: 20px;
+    padding: 0 2rem;
     color: #018136;
 
     text-decoration:underline overline;
     text-decoration-style: double;
-
-/* 
-    text-align:center;
-    display: flex;
-    flex-direction: column; */
-    /* grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 20px 0;
-    grid-gap: 20px;
-    align-items:center; */
 }
 
-/* .title-heading h3:after, 
-.title-heading h1:before {
-    content: " ";
-    display: block;
-    height:15px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%236699a1' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-
-} */
-    /* content: " ";
-    display: block;
-    border-bottom: 3px solid #4eb982; */
-/* } */
 
 .title-heading h1{
     font-size: 2rem;
@@ -119,14 +102,3 @@ body{
     margin-left: 200px;
 }
 
-/* .container{ */
-    /* width: 100%; */
-    /* max-width: 98rem; */
-    /* margin: 0 0; */
-    /* padding: 0 1.5rem; */
-/* } */
-
-/* .container p{
-    margin-right: 10rem;
-    margin-left: 10rem;
-} */
