--- a/Project1 - responsive website/css/footer.css
+++ b/Project1 - responsive website/css/footer.css
@@ -1,54 +1,18 @@
-
-/* footer */
-
-
-.footer-container{
+.footer-container {
     margin-top: 50px;
-    background-color: #F5F5F5;
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 400px;
-    flex-direction:column;
-
+    flex-direction: column;
 }
-
-.footer-container img{
-    width: 40%;
-}
-
-/* .stip p{
-    /* width: 100%; */
-    /* background-color: #018136;
-    min-height: 40px; 
-    /* position: fixed; */
-    /* left: 0; */
-    /* bottom: 0; */
-    /* width: 100%; */
-    /* background-color: red; */
-    /* color: white; */
-    /* text-align: center; */
-
-/* 
+  
+.footer-container img {
     width: 100%;
-    position: fixed;        
-    background: #333;
-    padding: 10px 0;
-    color: #fff;
-} */
-
-/*
-.fixed-footer{
-     width: 100%;
-    position: fixed;        
-    background: #333;
-    padding: 10px 0;
-    color: #fff;
+    max-width: 400px;
 }
- */
 
-
- .footer {
+.footer {
     position: absolute;
     right: 0;
     bottom: 0;
@@ -57,4 +21,4 @@
     text-align: center;
     min-width: 20px;
     margin-top: 20px;
-  }
+}
