--- a/Project1 - responsive website/css/hero.css
+++ b/Project1 - responsive website/css/hero.css
@@ -1,42 +1,9 @@
-/* hero */
- 
-    /* width: 100%;
-    height: 80%;
-    /* height: 80vh; */
-    /* background-repeat: no-repeat;*/
-    /* background-size: cover;
-    background-position: top, center;
-    position: relative; 
-} */
-
 .hero {
-    /* margin-bottom: 100px; */
-}
-/* 
-section {
-    display: flex;
-    height: 80vh;
-    justify-content: center;
-    align-items: center;
-    background-color: blue;
+    padding-top: 70px;
 }
 
-.hamburger{
-    justify-self: end;
+@media screen and (min-width: 960px) {
+    .hero {
+        padding-top: 0;
+    }
 }
-
-.hero img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-} 
- */
-
- .hero-image{
-    /* max-height: 400px; */
- }
-
- .nav-logo{
-    width: 100%;
-    height: auto;
- }
