--- a/Project1 - responsive website/css/navigation.css
+++ b/Project1 - responsive website/css/navigation.css
@@ -1,68 +1,98 @@
-/* navigation */
-
-header{
-    background-color: white;
-    /* width: 100%; */
-    /* height: 5rem; */
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* z-index: 1; */
-    padding-top: 1rem;
-}
-
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav-brand{
-    width: 1rem;   
-}
-
-.menu-icons i {
-    font-size: 3.5;
-    color: #fafafa;
-    cursor: pointer;
-}
-.close{
-    color: #eb648c;
-}
-
-.nav-list{
-    background-color: white;
+.nav {
+    width: 100%;
+    background-color: #f5f5f5;
+    height: 70px;
     position: fixed;
-    top: 0;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    align-items: center;
-    justify-content: center;
-    /* padding-left: 10px; */
+    box-shadow: 3px 3px 5px #ececec;
 }
 
-.nav-list.active{
+.nav-brand {
+    width: 70px;
+    margin: 0 auto;
+    padding: 12px;
+}
+
+.nav-logo {
+    width: 100%;
+    height: auto;
+}
+
+.nav-list {
+    background-color: #f5f5f5;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    display: none;
+}
+
+.nav-list.active {
     right: 0;
 }
 
-.close{
+.nav-item {
+    padding: 10px;
+    font-size: 14px;
+    list-style: none;
+    text-transform: uppercase;
+}
+
+.nav-item a {
+    color: black;
+    position: relative;
+}
+
+.nav-item a::after {
+    content: '';
+    width: 5px;
+    height: 5px;
+    display: block;
+    border-radius: 50%;
+    background-color: #018136;
+    position: absolute;
+    left: -12px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.icon-close {
     position: absolute;
     top: 1rem;
-    left: 1.5rem;
+    right: 1.5rem;
+    z-index: 3;
 }
 
-.nav-item{
-    margin: 10px;
-    font-size: 14px;
-    /* text-transform: uppercase; */
-    list-style: none;
-    /* position: relative; */
-    /* width: 1rem; */
+.menu-icons i {
+    color: black;
+    cursor: pointer;
 }
 
-.nav-link{
-    /* font-size: 1rem; */
-    /* color: rgba(0, 0,0, 7); */
+.show {
+    display: block;
 }
 
+.hamburger span {
+    width: 20px;
+    height: 2px;
+    margin: 2px 0;
+    border-radius: 10%;
+    background-color: black;
+}
+
+@media screen and (min-width: 960px) {
+    .nav {
+        display: flex;
+        justify-content: center;
+    }
+    .nav-list {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: auto;
+    }
+    .nav-item::after {
+        right: 0;
+    }
+    .icon-close {
+        display: none;
+    }
+}
