--- a/Project1 - responsive website/css/organizer.css
+++ b/Project1 - responsive website/css/organizer.css
@@ -1,27 +1,35 @@
-.organizer{
-    background-color: #F5F5F5;
+.organizer {
+    background-color: #f5f5f5;
 }
 
-.organizer-container{
+.organizer-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
- }
+}
 
-.part{
-    margin: 2rem;
+.part {
+    padding: 12px;
     display: inline-block;
-    text-transform: capitalize;
-    text-align: center;    
-
+    text-align: center;
 }
 
-.part p{
+.part p {
     color: black;
-    text-transform: capitalize;
-    text-align: center;    
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 12px;
 }
 
-.part img{
-    width: 50%;
+.part img {
+    height: 60px;
+}
+
+@media screen and (min-width: 960px) {
+    .organizer-container {
+        flex-direction: row;
+        justify-content: space-around;
+    }
 }
