--- a/Project1 - responsive website/css/styles.css
+++ b/Project1 - responsive website/css/styles.css
@@ -1,82 +1,68 @@
 *,
 *::before,
-*::after{
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    box-sizing: inherit;
 }
 
-html{
+html {
     font-family: 'DraftsmanCasualF', sans-serif;
     line-height: 36px;
     font-size: 20px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-ul{
+ul {
     list-style: none;
 }
 
-p{
+p {
     font-size: 15px;
     text-align: left;
 }
 
-img{
-    /* width: 100%;
-    height: auto; */
-}
-
-body{
-    /* background-color: #F5F5F5; */
-    background-color: #F5F5F5;
+body {
+    background-color: #f5f5f5;
     position: relative;
-
 }
 
-section{
+section {
     padding: 2rem 0;
 }
 
-.grey-background{
-    background-color:#ECECEC;
+.grey-background {
+    background-color: #ececec;
 }
 
-
-.h3{
+.h3 {
     padding: 0;
     text-transform: uppercase;
 }
 
-.title-heading{
+.title-heading {
     text-align: center;
-    margin-bottom: 2rem;
-    margin-right: 10rem;
-    margin-left: 10rem;
+    margin-bottom: 12px;
 }
 
-.title-heading h3{
+.title-heading h3 {
     font-size: 25px;
     text-transform: uppercase;
     font-weight: normal;
     padding: 0 2rem;
     color: #018136;
-
-    text-decoration:underline overline;
+    text-decoration: underline overline;
     text-decoration-style: double;
 }
 
-
-.title-heading h1{
+.title-heading h1 {
     font-size: 2rem;
-    margin: .5rem;
+    margin: 0.5rem;
     color: green;
 }
-
 
 .bold-elem {
     font-size: 16px;
@@ -84,21 +70,24 @@ section{
     font-weight: bold;
 }
 
-.bold-elem-click{
+.bold-elem-click {
     text-transform: uppercase;
     font-size: 16px;
     color: #018136;
     font-weight: bold;
 }
 
-
-.description{
+.description {
     background-color: white;
 }
 
-
-.container-space{
-    margin-right: 200px;
-    margin-left: 200px;
+.container-space {
+    padding: 12px 24px;
 }
 
+@media screen and (min-width: 960px) {
+    .container-section {
+        max-width: 960px;
+        margin: 0 auto;
+    }
+}
