--- a/Project1 - responsive website/css/navigation.css
+++ b/Project1 - responsive website/css/navigation.css
@@ -78,6 +78,10 @@
     background-color: black;
 }
 
+.icon-not-show {
+    display: none;
+}
+
 @media screen and (min-width: 960px) {
     .nav {
         display: flex;
